fix spacing and hyphens

--- a/cards/stylesheets/cards-a6.css
+++ b/cards/stylesheets/cards-a6.css
@@ -194,6 +194,7 @@ section {
 .recto.strategy .description,
 .recto.escalade .description{
     line-height: 12pt;
+    hyphens: auto;
 }
 
 
@@ -324,6 +325,7 @@ h1 {
 .description p {
     display: block; /* to be part of the flex */
     flex-basis: content; /* size based on content */
+    hyphens: auto;
 
     text-align: center;
 
@@ -354,7 +356,8 @@ h1 {
 .consequences p {
     display: block;
     flex-basis: content;
-    
+    hyphens: auto;
+    hyphenate-limit-chars: 8 4 4;
     /* put just 1/2 line between p */
     margin-top: 0;
     margin-bottom: 0.5em;
@@ -442,6 +445,9 @@ h1 {
 .norm {
     background-size: cover;
     background-repeat: no-repeat;
+    background-size: calc(var(--width) + 2 * var(--bleed)) calc(var(--height) + 2 * var(--bleed));
+    background-position-x: calc(0mm - var(--bleed));
+    background-position-y: calc(0mm - var(--bleed));
 }
 
 .norm.verso {
